--- a/frontend/translations/id.po
+++ b/frontend/translations/id.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "PO-Revision-Date: 2022-09-03 08:15+0000\n"
 "Last-Translator: liimee <alt3753.7@gmail.com>\n"
-"Language-Team: Indonesian <https://hosted.weblate.org/projects/penpot/"
-"frontend/id/>\n"
+"Language-Team: Indonesian "
+"<https://hosted.weblate.org/projects/penpot/frontend/id/>\n"
 "Language: id\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -105,8 +105,7 @@ msgstr "Kata sandi berhasil diubah"
 
 #: src/app/main/ui/auth/recovery_request.cljs
 msgid "auth.notifications.profile-not-verified"
-msgstr ""
-"Profil belum terverifikasi, harap verifikasi profil sebelum melanjutkan."
+msgstr "Profil belum terverifikasi, harap verifikasi profil sebelum melanjutkan."
 
 #: src/app/main/ui/auth/recovery_request.cljs
 msgid "auth.notifications.recovery-token-sent"
@@ -176,6 +175,9 @@ msgstr ""
 msgid "auth.verification-email-sent"
 msgstr "Kami telah mengirimkan surel verifikasi ke"
 
+msgid "common.share-link.all-users"
+msgstr "Semua pengguna Penpot"
+
 msgid "common.share-link.confirm-deletion-link-description"
 msgstr ""
 "Apakah kamu yakin ingin menghapus tautan ini? Jika kamu menghapusnya, maka "
@@ -190,8 +192,36 @@ msgstr "Tautan berhasil disalin"
 msgid "common.share-link.link-deleted-success"
 msgstr "Tautan berhasil dihapus"
 
+msgid "common.share-link.manage-ops"
+msgstr "Atur perizinan"
+
+msgid "common.share-link.page-shared"
+msgid_plural "common.share-link.page-shared"
+msgstr[0] "%s halaman dibagikan"
+
+msgid "common.share-link.permissions-can-comment"
+msgstr "Dapat berkomentar"
+
+msgid "common.share-link.permissions-can-inspect"
+msgstr "Dapat menginspeksi kode"
+
 msgid "common.share-link.permissions-hint"
 msgstr "Siapapun yang memiliki tautan dapat mengakses"
+
+msgid "common.share-link.permissions-pages"
+msgstr "Halaman yang dibagikan"
+
+msgid "common.share-link.placeholder"
+msgstr "Tautan yang dapat dibagikan akan muncul di sini"
+
+msgid "common.share-link.team-members"
+msgstr "Hanya anggota tim"
+
+msgid "common.share-link.title"
+msgstr "Bagikan prototipe"
+
+msgid "common.share-link.view-all"
+msgstr "Pilih Semua"
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "dashboard.add-shared"
@@ -217,6 +247,12 @@ msgstr "Penpot Kamu"
 msgid "dashboard.delete-team"
 msgstr "Hapus tim"
 
+msgid "dashboard.download-binary-file"
+msgstr "Unduh berkas Penpot (.penpot)"
+
+msgid "dashboard.download-standard-file"
+msgstr "Unduh berkas standar (.svg + .json)"
+
 msgid "dashboard.draft-title"
 msgstr "Draf"
 
@@ -239,14 +275,32 @@ msgstr ""
 "Aduh! Kamu belum punya berkas! Jika kamu ingin mencoba beberapa template, "
 "buka [Pustaka & template](https://penpot.app/libraries-templates.html)"
 
+msgid "dashboard.export-binary-multi"
+msgstr "Unduh %s berkas Penpot (.penpot)"
+
 msgid "dashboard.export-frames"
 msgstr "Ekspor papan-papan ke PDF…"
+
+#: src/app/main/ui/export.cljs
+msgid "dashboard.export-frames.title"
+msgstr "Ekspor ke PDF"
 
 msgid "dashboard.export-multi"
 msgstr "Ekspor %s berkas Penpot"
 
+#: src/app/main/ui/workspace/header.cljs
+msgid "dashboard.export-shapes"
+msgstr "Ekspor"
+
+#: src/app/main/ui/export.cljs
+msgid "dashboard.export-shapes.title"
+msgstr "Ekspor pilihan"
+
 msgid "dashboard.export-single"
 msgstr "Ekspor berkas Penpot"
+
+msgid "dashboard.export-standard-multi"
+msgstr "Unduh %s berkas standar (.svg + .json)"
 
 msgid "dashboard.export.detail"
 msgstr "* Dapat mencakup komponen, grafik, warna dan/atau tipografi."
@@ -256,68 +310,13 @@ msgstr ""
 "Satu atau lebih berkas yang ingin kamu ekspor menggunakan pustaka bersama. "
 "Apa yang ingin kamu lakukan dengan asetnya*?"
 
-msgid "common.share-link.all-users"
-msgstr "Semua pengguna Penpot"
-
-msgid "common.share-link.manage-ops"
-msgstr "Atur perizinan"
-
-msgid "common.share-link.page-shared"
-msgid_plural "common.share-link.page-shared"
-msgstr[0] "%s halaman dibagikan"
-
-msgid "common.share-link.permissions-can-comment"
-msgstr "Dapat berkomentar"
-
-msgid "common.share-link.permissions-can-inspect"
-msgstr "Dapat menginspeksi kode"
-
-msgid "common.share-link.permissions-pages"
-msgstr "Halaman yang dibagikan"
-
-msgid "common.share-link.team-members"
-msgstr "Hanya anggota tim"
-
-msgid "common.share-link.view-all"
-msgstr "Pilih Semua"
-
-msgid "dashboard.download-binary-file"
-msgstr "Unduh berkas Penpot (.penpot)"
-
-msgid "dashboard.download-standard-file"
-msgstr "Unduh berkas standar (.svg + .json)"
-
-msgid "dashboard.export-binary-multi"
-msgstr "Unduh %s berkas Penpot (.penpot)"
-
-msgid "dashboard.export-standard-multi"
-msgstr "Unduh %s berkas standar (.svg + .json)"
-
 msgid "dashboard.export.options.all.message"
 msgstr "berkas dengan pustaka bersama akan dimasukkan dalam hasil ekspor"
+
+msgid "dashboard.export.options.all.title"
+msgstr "Ekspor pustaka bersama"
 
 msgid "dashboard.export.options.detach.message"
 msgstr ""
 "Pustaka bersama tidak akan dimasukkan dalam hasil ekspor dan tidak ada aset "
 "yang akan ditambahkan ke pustaka. "
-
-#: src/app/main/ui/workspace/header.cljs
-msgid "dashboard.export-shapes"
-msgstr "Ekspor"
-
-msgid "common.share-link.placeholder"
-msgstr "Tautan yang dapat dibagikan akan muncul di sini"
-
-#: src/app/main/ui/export.cljs
-msgid "dashboard.export-frames.title"
-msgstr "Ekspor ke PDF"
-
-#: src/app/main/ui/export.cljs
-msgid "dashboard.export-shapes.title"
-msgstr "Ekspor pilihan"
-
-msgid "common.share-link.title"
-msgstr "Bagikan prototipe"
-
-msgid "dashboard.export.options.all.title"
-msgstr "Ekspor pustaka bersama"
